# nixl

./: CODEOWNERS  meson.build
.gitlab/: build.sh
benchmark/nixlbench/: meson.build  meson_options.txt
benchmark/nixlbench/contrib/: Dockerfile
benchmark/nixlbench/src/utils/: utils.cpp  utils.h
benchmark/nixlbench/src/worker/nixl/: gdaki_kernels.cu  gdaki_kernels.cuh  meson.build  nixl_worker.cpp  nixl_worker.h
contrib/: Dockerfile  Dockerfile.manylinux
contrib/aws-efa/: README.md  aws_job_def.json  aws_test.sh
examples/plugins/inmemkv/: INMEMKV_ARCHITECTURE.md  README.md  inmemkv_backend.cpp  inmemkv_backend.h  inmemkv_engine_impl.cpp  inmemkv_engine_impl.h  inmemkv_store.cpp  inmemkv_store.h  meson.build
src/bindings/rust/tests/: test_sync_manager.rs
src/plugins/: meson.build
src/plugins/kv/: kv_engine.cpp  kv_engine.h  kv_engine_impl.h  kv_store.h
src/plugins/mockkv/: MOCKKV_ARCHITECTURE.md  README.md  meson.build  mockkv_backend.cpp  mockkv_backend.h  mockkv_plugin.cpp
src/plugins/posix/: io_queue.cpp  io_queue.h  io_uring_io_queue.cpp  linux_aio_io_queue.cpp  meson.build  posix_aio_io_queue.cpp  posix_backend.cpp  posix_backend.h
src/plugins/ucx/: config.cpp  config.h  ucx_backend.cpp  ucx_backend.h  ucx_utils.cpp  ucx_utils.h
src/utils/: meson.build
src/utils/object/: meson.build
src/utils/object/s3/: utils.cpp  utils.h
src/utils/ucx/: ucx_utils.cpp
test/gtest/: metadata_exchange.cpp
test/gtest/plugins/: meson.build  obj_plugin.cpp  transfer_handler.h
test/unit/utils/ucx/: ucx_am_test.cpp  ucx_worker_test.cpp
