# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

inmemkv_sources = [
    '../../../src/plugins/kv/kv_engine.cpp',
    'inmemkv_backend.cpp',
    'inmemkv_backend.h',
    'inmemkv_engine_impl.cpp',
    'inmemkv_engine_impl.h',
    'inmemkv_store.cpp',
    'inmemkv_store.h',
    'inmemkv_plugin.cpp',
]

inmemkv_example_plugin = shared_library(
    'INMEMKV',
    inmemkv_sources,
    dependencies: [nixl_infra, nixl_common_dep],
    cpp_args: ['-fPIC'],
    include_directories: [nixl_inc_dirs, utils_inc_dirs],
    install: false,
    name_prefix: 'libplugin_')

# Convenience alias so "ninja -C build INMEMKV" works.
alias_target('INMEMKV', inmemkv_example_plugin)
